[package]
name = "etsm"
version = "0.5.0"
edition = "2021"
authors = ["Eric Thiffeault <ethiffeault@gmail.com>"]
description = "Efficient Tiny State Machine using object callbacks."
repository = "https://github.com/ethiffeault/etsm"
license = "MIT"
keywords = ["state", "statemachine", "finite", "fsm", "sm"]

[lib]
name = "etsm"
path = "src/lib.rs"
test = true

[dependencies]

